--- a/src/app/components/blockly/blockly.component.html
+++ b/src/app/components/blockly/blockly.component.html
@@ -2,8 +2,8 @@
   <tr>
     <td>
       <h1>
-        <a href="https://developers.google.com/blockly/">Blockly</a>&rlm;
-        &gt; <a href="../index.html">Demos</a>&rlm; &gt;
+        <a href="https://developers.google.com/blockly/">Blockly</a>&rlm; &gt;
+        <a href="../index.html">Demos</a>&rlm; &gt;
         <span id="title">...</span>
       </h1>
     </td>
@@ -58,6 +58,5 @@
 
 <div id="blocklyDiv"></div>
 
-
 <!-- Next line doesn't appear to do anything - not defined anywhere in app -->
-{{xmlToolbox}}
+<!-- {{xmlToolbox}} -->
