--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<h1>LUSI Security - Blockly Demo</h1>
+<h1>
+  <a href="https://www.lancaster.ac.uk/">Lancaster University</a> - Blockly Demo
+</h1>
 <app-blockly></app-blockly>
