--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>
-  <a href="https://www.lancaster.ac.uk/">Lancaster University</a> - Blockly Demo
+  <a href="https://www.lancaster.ac.uk/">Lancaster University, UK</a> - Blockly
+  Demo
 </h1>
 <app-blockly></app-blockly>
