Pushed blocklyDiv backwards on its z-index - workspace is now accessible to focus

--- a/src/app/components/blockly/blockly.component.css
+++ b/src/app/components/blockly/blockly.component.css
@@ -1,6 +1,9 @@
 #blocklyDiv {
+  /* border: 1px solid red; */
   height: 80%;
   width: 100%;
   position: absolute;
   bottom: 0;
+  /* display: none; */
+  z-index: -10;
 }
